cmake_minimum_required(VERSION 3.17)
project(C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(C__
        src/Costanti/Costanti.cpp
        src/Data\ Structures/Struct.cpp
        src/Dynamic\ Memory/DinMemory.cpp
        src/Funzioni/Funzioni.cpp
        src/HelloWorld/HelloWorld.cpp
        src/IO/IO.cpp
        src/Namespace/Namespace.cpp
        src/Operatori/Operatori.cpp
        src/Statement/Statement.cpp
        src/Template/Template.cpp
        src/Variabili\ e\ Tipi/Integer.cpp
        src/Variabili\ e\ Tipi/String.cpp
        src/Class/ClassI.cpp
        src/Class/ClassII.cpp
        src/Class/SpecialMembers.cpp)